--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ button.select, a.btn.select{
 	min-width: 50px;
 	margin: 4px 2px;
 }
-button.w, a.btn.w{background: #ffffff;color:#000000;}
-button.d, a.btn.d{background: #eeeeee;color:#000000;}
+button.w, a.btn.w{background: #ffffff;color:#000000;} button.w.active, a.btn.w.active{background: #dfdfdf;}
+button.d, a.btn.d{background: #eeeeee;color:#000000;} button.d.active, a.btn.d.active{background: #d8d8d8;}
 
 button.r, a.btn.r{background: #ff8888;} button.r.active, a.btn.r.active{background: #ff4444;}
 button.g, a.btn.g{background: #aed581;} button.g.active, a.btn.g.active{background: #4caf50;}
@@ -74,7 +74,8 @@ button.g, a.btn.g{background: #aed581;} button.g.active, a.btn.g.active{backgrou
 	margin: 16px auto;
 	text-align:center;
 }
-#testnav button:nth-child(5n){
+#testnav #testnavblock{
+	display:inline-block;
 	margin-right:16px;
 }
 #h1{
@@ -88,26 +89,37 @@ button.g, a.btn.g{background: #aed581;} button.g.active, a.btn.g.active{backgrou
 	margin: 16px auto;
 }
 #question{
-	margin: 16px;
+	position: relative;
+	margin: 0 16px;
 	padding: 16px;
 	box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
 	overflow:hidden;
 	max-height:1000px;
 	opacity: 1;
-	zoom:1;
+	max-height: 200vh;
 }
 #question.hidden{
+	max-height: 0vh;
 	opacity: 0;
 	pointer-events: none;
-	zoom:0.00001;
-	margin: 0px;
-	padding: 0px;
+	margin: 0px 16px;
+	padding: 0px 16px;
 }
 #question.answered.true{
 	background: #eeffee;
 }
 #question.answered.false{
 	background: #ffeeee;
+}
+
+#question #num{
+	position:absolute;
+	top:0px;
+	right:16px;
+	padding:8px;
+	border-radius: 0 0 2px 2px;
+	background: #ffc000;
+	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
 }
 
 #question #question_image{
@@ -164,6 +176,6 @@ button.g, a.btn.g{background: #aed581;} button.g.active, a.btn.g.active{backgrou
 }
 #sidebar > div{
 	display:inline-block;
-	width: 30%;
+	width: calc(25% - 16px);
 	text-align: center;
 }
