--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 }
 
 
-button, a.btn,select{
+button, .btn,select{
 	display:inline-block;
 	min-width: 150px;
 	margin: 4px 8px;
@@ -36,29 +36,31 @@ button, a.btn,select{
 	cursor: pointer;
 	font-size:14px;
 }
-button.w100, a.btn.w100{
+button.w100, .btn.w100{
 	min-width:0px;
 	width:calc(100% - 16px);
 }
-button.active, a.btn.active{
+button.active, .btn.active{
 	background: #4444ff;
 	box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
 }
-button.hidden, a.btn.hidden{
+button.hidden, .btn.hidden{
 	max-height:0px;
 	padding:0px;
 	margin:0px;
 }
-button.select, a.btn.select{
+button.select, .btn.select{
 	min-width: 50px;
 	margin: 4px 2px;
 }
-button.w, a.btn.w{background: #ffffff;color:#000000;} button.w.active, a.btn.w.active{background: #dfdfdf;}
-button.d, a.btn.d{background: #eeeeee;color:#000000;} button.d.active, a.btn.d.active{background: #d8d8d8;}
+button.w, .btn.w{background: #ffffff;color:#000000;} button.w.active, .btn.w.active{background: #dfdfdf;}
+button.d, .btn.d{background: #eeeeee;color:#000000;} button.d.active, .btn.d.active{background: #d8d8d8;}
 
-button.r, a.btn.r{background: #ff8888;} button.r.active, a.btn.r.active{background: #ff4444;}
-button.g, a.btn.g{background: #aed581;} button.g.active, a.btn.g.active{background: #4caf50;}
-
+button.r, .btn.r{background: #ff8888;} button.r.active, .btn.r.active{background: #ff4444;}
+button.g, .btn.g{background: #aed581;} button.g.active, .btn.g.active{background: #4caf50;}
+select{
+	width:120px;
+}
 select.active{
 	background: #4444ff;
 	box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
@@ -68,12 +70,6 @@ option{
 	color:#000000;
 	padding:4px;
 	font-size:14px;
-}
-
-#separator{
-	display:inline-block;
-	height:1em;
-	width:16px;
 }
 
 #testnav{
@@ -185,6 +181,6 @@ option{
 }
 #sidebar > div{
 	display:inline-block;
-	width: calc(25% - 16px);
+	width: 30%;
 	text-align: center;
 }
